# TradeRadar

./: .gitmodules  CMakeLists.txt  README.md
src/: concurrentqueue.cpp  concurrentqueue.hpp  controller.cpp  controller.hpp  main.cpp  notes.txt  tickerdata.h  ui.cpp  ui.hpp  websocket.cpp  websocket.hpp
